# TENDER_VOLKS

./: .env.dev  .env.example  .gitignore  .replit  README.md  README_TASK_SUMMARY.md  diagnose_atc_links.py  evidence_log.csv  gem_parent_tender_extraction_map.yaml  pyproject.toml  replit.md  requirements.txt  test_implementation.py  vercel.json
.agents/: AGENTS.md
app/: main.py
attached_assets/: Pasted-Here-is-the-comprehensive-debugging-audit-report-detail_1783944425913.txt  Pasted-You-are-an-expert-React-TypeScript-Tailwind-CSS-enginee_1783584247383.txt  Pasted-You-are-editing-my-tender-extraction-codebase-Use-the-d_1783944783996.txt  Pasted-You-are-working-inside-my-existing-project-VolksEnergie_1783664292307.txt
backend/: Dockerfile  requirements.txt
data/: tender.db
docs/: architecture_overview.md  dev_log_day1.md  field_inventory.md  open_questions.md  scope_wk1to2.md  stage1_spatial_extraction.md  tender_ocr_playbook.md
frontend/: .env.development  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
infra/: docker-compose.dev.yml
ocr/: field_extractor.py  layout_detector.py  layoutlm_stage.py  ocr_engine.py  pdf_converter.py  pipeline.py  result_writer.py
scratch/: audit_sample_files_ocr.py  check_clustered_blocks.py  check_endpoints.py  check_job_output.py  compare_infosheets.py  debug_7317018.py  debug_extraction_output.txt  debug_gail_vrla.py  debug_split.py  debug_test.py  diagnose_8667425.py  diagnose_8667425_p3.py  diagnose_prefix_match.py  dump_jobs.py  extract_barauni.py  extract_gail_jaipur_txt.py  (+24 more)
(+247 files in other folders)
