[project]
name = "tender-volks-backend"
version = "1.0.0"
description = "Tender Volks OCR Backend"
authors = [{name = "Tender Volks Team"}]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-multipart>=0.0.5",
    "python-magic>=0.4.27",
    "Pillow>=8.0.0",
    "pytesseract>=0.3.10",
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.7.0",
    "python-dotenv>=0.19.0",
    "minio>=7.0.0",
    "openpyxl>=3.0.0",
    "reportlab>=3.6.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
    "pydantic>=1.8.0",
    "email-validator>=1.1.0",
    "boto3>=1.20.0",
    "celery>=5.2.0",
    "redis>=4.0.0",
]

[tool.vercel]
entrypoint = "backend.app.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"